admin/tests test historiques et test eve ajout ruche rucher incomplets

--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col">
        			<span class="padicons">
-       				<input type="checkbox" id="showruches" th:title="#{afficherrucheetc}" checked/>
+       				<input type="checkbox" id="showruches" th:title="#{afficherrucheetc}" th:text="#{afficherPlus}" checked/>
 				</span>
 			</div>
 		</div>
