--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid " id="detailRucher">
+	<div class="container-fluid">
 		<table class="table table-bordered">
 			<thead>
 				<tr>
