--- a/src/main/resources/templates/essaim/essaimHisto.html
+++ b/src/main/resources/templates/essaim/essaimHisto.html
@@ -25,13 +25,16 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{rucher}"></th>
+					<th th:text="#{Duree}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="eve : ${evensEssaimAjout}">
 					<td><a th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
 						th:href="@{'/evenement/'+${eve.id}}"></a></td>
-					<td th:text="${eve.rucher?.nom}"></td>
+					<td><a th:text="${eve.rucher?.nom}"
+						th:href="@{'/rucher/'+${eve.rucher?.id}}"></a></td>
+					<td th:text="${durees[eveStat.index]}"></td>	
 				</tr>
 		</table>
 	</div>
