--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/datatables-1.11.3/datatables.min.css}" />
+	th:href="@{/js/datatables-1.11.3_1/datatables.min.css}" />
 	
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/bootstrap-icons-1.7.2/bootstrap-icons.css}" />	
@@ -26,7 +26,7 @@
 <script th:src="@{/js/bootstrap-5.1.3/js/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.1.3/css/bootstrap.min.css}" />
-<script th:src="@{/js/datatables-1.11.3/datatables.min.js}"></script>
+<script th:src="@{/js/datatables-1.11.3_1/datatables.min.js}"></script>
 <script th:inline="javascript">
 $().ready(function() {
   $('.confirmdeploie').on('click', function() {
@@ -57,9 +57,9 @@ $.extend( true, $.fn.dataTable.defaults, {
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
 
-<script th:fragment="jsol" th:src="@{/js/ol-v6.9.0/ol.js}"></script>
+<script th:fragment="jsol" th:src="@{/js/ol-6.10.0/ol.js}"></script>
 <link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/ol-v6.9.0/ol.css}" /> 
+	th:href="@{/js/ol-6.10.0/ol.css}" /> 
  
 <script th:fragment="jsGpPluginOpenLayers" th:attr="data-key=${ignDataKey}"  
    th:src="@{/js/GpPluginOpenLayers-3.2.4/GpPluginOpenLayers.js}"></script>
@@ -68,8 +68,8 @@ $.extend( true, $.fn.dataTable.defaults, {
 <link th:fragment="cssGpPluginOpenLayers" rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/GpPluginOpenLayers-3.2.4/GpPluginOpenLayers.css}" />
  	
-<script th:fragment="dom-to-image" th:src="@{/js/dom-to-image-more.min-2.8.0.js}"></script>
-<script th:fragment="jspdf" th:src="@{/js/jspdf-2.4.0.umd.min.js}"></script>
+<script th:fragment="dom-to-image" th:src="@{/js/dom-to-image-more.min-2.9.5.js}"></script>
+<script th:fragment="jspdf" th:src="@{/js/jspdf-2.5.0.umd.min.js}"></script>
 <script th:fragment="jsdatepicker-fr" th:src="@{/js/datepicker-fr.js}"></script>
 
 <script th:fragment="jsChart" th:src="@{/js/chart.min-3.7.0.js}"></script>
