--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -83,6 +83,9 @@ $().ready(function() {
 				  class="padicons bi bi-list-ul" th:title="#{evenements}" aria-hidden="true"></a>
 				<a th:href="@{'/evenement/ruche/commentaire/'+${ruche.id}}"
 				  class="bi bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>
+				&nbsp;
+				<a th:href="@{'/ruche/historique/'+${ruche.id}}"
+				  class="bi bi-calendar-check" th:title="#{historique}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
