--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -33,23 +33,25 @@
 				<thead>
 					<tr>
 						<th th:text="#{historique}"></th>
+						<th th:text="#{Erreur}"></th>
 						<th th:text="#{date}"></th>
-						<th th:text="#{evenement}"></th>
+						<th th:text="#{type}"></th>
 						<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
 						<th	style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="evenement : ${eveRucherRuche}">
-						<td th:text="${evenement.valeur}"></td>
+					<tr th:each="eve : ${eveRucherRuche}">
+						<td th:text="${ruchersErr[eveStat.index]}"></td>
+						<td th:text="${errsRucher[eveStat.index]}"></td>
 						<td><a
-							th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${evenement.id}+
+							th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
+							th:with="url='/evenement/'+${eve.id}+
 								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')"
 							th:href="@{${url}}"></a></td>
-						<td th:text="#{${evenement.type}}"></td>
-						<td th:text="${evenement.ruche?.nom}"></td>
-						<td th:text="${evenement.rucher?.nom}"></td>
+						<td th:text="#{${eve.type}}"></td>
+						<td th:text="${eve.ruche?.nom}"></td>
+						<td th:text="${eve.rucher?.nom}"></td>
 					</tr>
 				</tbody>
 			</table>
@@ -125,6 +127,7 @@
 			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
 				<thead>
 					<tr>
+						<!-- <th th:text="#{Erreur}"></th> -->
 						<th th:text="#{date}"></th>
 						<th th:text="#{evenement}"></th>
 						<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
@@ -132,15 +135,16 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="evenement : ${eveRucheHausseErr}">
+					<tr th:each="eve : ${eveRucheHausseErr}">
+						<!-- <td th:text="${errsRuche[eveStat.index]}"></td> -->
 						<td><a
-							th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${evenement.id}+
+							th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
+							th:with="url='/evenement/'+${eve.id}+
 								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')"
 							th:href="@{${url}}"></a></td>
-						<td th:text="#{${evenement.type}}"></td>
-						<td th:text="${evenement.ruche?.nom}"></td>
-						<td th:text="${evenement.hausse?.nom}"></td>
+						<td th:text="#{${eve.type}}"></td>
+						<td th:text="${eve.ruche?.nom}"></td>
+						<td th:text="${eve.hausse?.nom}"></td>
 					</tr>
 				</tbody>
 			</table>
