rucher historique ajout nb ruche ajout/retrait si groupe

--- a/src/main/resources/templates/ruche/rucheHisto.html
+++ b/src/main/resources/templates/ruche/rucheHisto.html
@@ -23,7 +23,7 @@
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th th:text="#{evenement}"></th>
+					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{hausse}"></th>
