essaimDetail.html récoltes ajout lien vers rucher

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -195,13 +195,13 @@
 				</tr>
 			</thead>
 			<tbody>
-			
 				<tr>
 					<th style="background-color:LightCyan" th:text="#{rucher}"></th>
-					<td th:each="rucher : ${rucherRecolteListe}" th:text="${rucher}"></td>
+					<td th:each="rucher : ${rucherRecolteListe}">
+						<a th:href="@{'/rucher/'+${rucher?.id}}" th:text="${rucher?.nom}"></a>
+					</td>
 					<td></td>		
 				</tr>
-				
 				<tr>
 					<th style="background-color:LightCyan" th:text="#{poidskg}"></th>
 					<td th:each="poids : ${poidsListe}" th:text="${#numbers.formatDecimal(poids/1000.0,1,2,'DEFAULT')}"></td>
