Utilisation de ${@environment.getProperty('xxxxx')} dans les templates

--- a/src/main/resources/templates/essaim/essaimEssaimerForm.html
+++ b/src/main/resources/templates/essaim/essaimEssaimerForm.html
@@ -8,7 +8,8 @@
 	$().ready(function() {
 		$("#nom").focus();
 		$("#commentaire").val([[#{Essaimage}]] + ' ' + [[${essaim.nom}]]);
-		$("#nom").val([[${essaim.nom}]] + [[${essaimeSuffix}]]);
+		$("#nom").val([[${essaim.nom}]] +
+				[[${@environment.getProperty('essaime.suffix')}]]);
 		jQuery.validator.addMethod("nomExiste", function(value) {   
     		return $.inArray(value, [[${essaimNoms}]]) == -1;
 			}, [[#{nomexiste}]]);
