--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -24,7 +24,8 @@
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<h1 class="item" th:utext="${accueilTitre}"></h1>
+			<h1 class="item"
+				th:utext="${@environment.getProperty('accueil.titre')}"></h1>
 		</div>
 		<div class="row">
 			<ul>
