--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -12,7 +12,7 @@
 	const ruchersmapzoom = [[${@environment.getProperty('ruchers.map.zoom')}]]	
     const _csrf_token = [[${_csrf.token}]];
 </script>
-<script async defer	th:src="${ggMapsUrl}"></script>
+<script async defer	th:src="${@environment.getProperty('gg.map.url')}"></script>
 </head>
 <body>
 	<nav th:replace="include :: navbar"></nav>
