--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1">
-<link rel="" type="image/png" th:href="@{/images/ruchesicon.png}" />
+<link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/jquery-ui-1.13.1/jquery-ui.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
@@ -28,11 +28,6 @@
 	th:href="@{/js/bootstrap-5.1.3/css/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.11.4/datatables.min.js}"></script>
 <script th:inline="javascript">
-$().ready(function() {
-  $('.confirmdeploie').on('click', function() {
-	return confirm([[#{confirmDeploie}]]);
-  });
-});
 if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
 	jQuery.getScript([[@{/js/jquery.validate-1.19.3-messages_fr.min.js}]]);
 	$.extend( true, $.fn.dataTable.defaults, {
@@ -95,7 +90,7 @@ $.extend( true, $.fn.dataTable.defaults, {
 <script th:fragment="moment" th:src="@{/js/moment-with-locales.min-2.29.1.js}"></script>
 	
 <body>
-	<!--/*    https://getbootstrap.com/docs/5.0/components/navbar/    */-->
+	<!--/*    https://getbootstrap.com/docs/5.1/components/navbar/    */-->
 	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 	  <div class="container-fluid"> 
 		<a class="navbar-brand" href="#" th:href="@{/}"> <img
