essaimDetail.html ajout pasderuchetxt, messages suppression pasDeHausses

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -10,6 +10,7 @@
 	const recolteHausses = [[${recolteHausses}]];
 	const rucheEssaim = [[${rucheEssaim}]];
 	const PasDeRuche = [[${PasDeRuche}]];
+	const pasderuchetxt = [[#{PasDeRuche}]];
 	const essaimsupprecolttxt =[[#{essaimsupprimerecolte}]];
 	const suppessaimevetxt = [[#{supprimeressaimevenements}]];
 	const suppessaimtxt = [[#{supprimeressaim}]];
