--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -133,7 +133,7 @@ $(document).ready(function() {
 			</tbody>
 		</table>
 
-		<h6 th:text="#{PasDeHausses}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>	
+		<h6 th:text="#{PasDeHausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>	
 		<h6 th:text="#{haussesRecolte}" th:unless="${#lists.isEmpty(detailsRecolte)}"></h6>
 		<table class="table table-sm table-bordered" id="hausses" th:unless="${#lists.isEmpty(detailsRecolte)}">
 			<thead>
