--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -4,26 +4,26 @@
 <script th:src="@{/js/ruches/rucherDetailGg.js}"></script>
 <script th:src="@{/js/ruches/rucherDetailCarto.js}"></script>
 <script th:inline="javascript">
-	let rucheParcours = [[${rucheParcours}]];
-	let distParcours = [[${distParcours}]];
-	const rucher = [[${rucher}]];
-	const rucherMapZoom = [[${@environment.getProperty('rucher.map.zoom')}]];
-	const longitudeCentre = [[${longitudeCentre}]];
-	const latitudeCentre = [[${latitudeCentre}]];
-	const rayonsButinage = [[${rayonsButinage}]];
-	const distButinage = [[#{distButinage}]];
-	const urlruches = [[@{/}]];
-	const nomHausses = [[${hausseNoms}]];
-	const essaimtxt = [[#{essaim}]];
-	const pasdessaimtxt = [[#{Pasdessaim}]];
-	const ruchetxt = [[#{ruche}]];
-	const haussestxt = [[#{Hausses}]];
-	const pasdehaussetxt = [[#{Pasdehausse}]];
-	const ruches = [[${ruches}]];
-	const ruchestxt= [[#{ruches}]];
-	const distancedeparcourstxt = [[#{distancedeparcours}]];
-	const entreetxt = [[#{Entree}]];	
-    const _csrf_token = [[${_csrf.token}]];
+	let rucheParcours = /*[[${rucheParcours}]]*/ null;
+	let distParcours = /*[[${distParcours}]]*/ null;
+	const rucher = /*[[${rucher}]]*/ null;
+	const rucherMapZoom = /*[[${@environment.getProperty('rucher.map.zoom')}]]*/ null;
+	const longitudeCentre = /*[[${longitudeCentre}]]*/ null;
+	const latitudeCentre = /*[[${latitudeCentre}]]*/ null;
+	const rayonsButinage = /*[[${rayonsButinage}]]*/ null;
+	const distButinage = /*[[#{distButinage}]]*/ null;
+	const urlruches = /*[[@{/}]]*/ null;
+	const nomHausses = /*[[${hausseNoms}]]*/ null;
+	const essaimtxt = /*[[#{essaim}]]*/ null;
+	const pasdessaimtxt = /*[[#{Pasdessaim}]]*/ null;
+	const ruchetxt = /*[[#{ruche}]]*/ null;
+	const haussestxt = /*[[#{Hausses}]]*/ null;
+	const pasdehaussetxt = /*[[#{Pasdehausse}]]*/ null;
+	const ruches = /*[[${ruches}]]*/ null;
+	const ruchestxt= /*[[#{ruches}]]*/ null;
+	const distancedeparcourstxt = /*[[#{distancedeparcours}]]*/ null;
+	const entreetxt = /*[[#{Entree}]]*/ null;	
+    const _csrf_token = /*[[${_csrf.token}]]*/ null;
 </script>
 <script async defer	th:src="${@environment.getProperty('gg.map.url')}"></script>
 </head>
