--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -3,26 +3,26 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:src="@{/js/ruches/essaimDetail.js}"></script>
 <script th:inline="javascript">
-	const _csrf_token = [[${_csrf.token}]];
-	const _csrf_param_name = [[${_csrf.parameterName}]];
-	const essaimnoms = [[${essaimnoms}]];
-	const ruchesvidesnoms = [[${ruchesvidesnoms}]];
-	const recolteHausses = [[${recolteHausses}]];
-	const rucheEssaim = [[${rucheEssaim}]];
-	const PasDeRuche = [[${PasDeRuche}]];
-	const pasderuchetxt = [[#{PasDeRuche}]];
-	const essaimsupprecolttxt =[[#{essaimsupprimerecolte}]];
-	const suppessaimevetxt = [[#{supprimeressaimevenements}]];
-	const suppessaimtxt = [[#{supprimeressaim}]];
-	const evenements = [[${evenements}]];
-	const nomessaimsvirgule = [[#{nomessaimsvirgule}]];
-	const nexistPasOuPasVidtxt = [[#{nexistentPasOuPasVides}]];
-	const nomexistdejatxt = [[#{nomexistentdeja}]];
-	const Ruchestxt = [[#{Ruches}]];
-	const Essaimstxt = [[#{Essaims}]];
-	const creertxt = [[#{creer}]];
-	const urlessaimclone = [[@{/essaim/clone/}]];
-	const essaimid = [[${essaim.id}]];
+	const _csrf_token = /*[[${_csrf.token}]]*/ null;
+	const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
+	const essaimnoms = /*[[${essaimnoms}]]*/ null;
+	const ruchesvidesnoms = /*[[${ruchesvidesnoms}]]*/ null;
+	const recolteHausses = /*[[${recolteHausses}]]*/ null;
+	const rucheEssaim = /*[[${rucheEssaim}]]*/ null;
+	const PasDeRuche = /*[[${PasDeRuche}]]*/ null;
+	const pasderuchetxt = /*[[#{PasDeRuche}]]*/ null;
+	const essaimsupprecolttxt =/*[[#{essaimsupprimerecolte}]]*/ null;
+	const suppessaimevetxt = /*[[#{supprimeressaimevenements}]]*/ null;
+	const suppessaimtxt = /*[[#{supprimeressaim}]]*/ null;
+	const evenements = /*[[${evenements}]]*/ null;
+	const nomessaimsvirgule = /*[[#{nomessaimsvirgule}]]*/ null;
+	const nexistPasOuPasVidtxt = /*[[#{nexistentPasOuPasVides}]]*/ null;
+	const nomexistdejatxt = /*[[#{nomexistentdeja}]]*/ null;
+	const Ruchestxt = /*[[#{Ruches}]]*/ null;
+	const Essaimstxt = /*[[#{Essaims}]]*/ null;
+	const creertxt = /*[[#{creer}]]*/ null;
+	const urlessaimclone = /*[[@{/essaim/clone/}]]*/ null;
+	const essaimid = /*[[${essaim.id}]]*/ null;
 	$(document).ready(essaimDetail);
 </script>
 </head>
