--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -9,33 +9,33 @@
 <script th:src="@{/js/ruches/rucherDetailCarto.js}"></script>
 <script th:replace="include :: dom-to-image"></script>
 <script th:inline="javascript">
-	let rucheParcours = [[${rucheParcours}]];
-	let distParcours = [[${distParcours}]];
-	const longitudeCentre = [[${longitudeCentre}]];
-	const latitudeCentre = [[${latitudeCentre}]];
-	const rayonsButinage = [[${rayonsButinage}]];
-	const cercles = [[#{cercles}]];
-	const distButinage = [[#{distButinage}]];
-	const ruches = [[${ruches}]];
-	const rucher = [[${rucher}]];
-	const nomHausses = [[${hausseNoms}]];
-	const rapprochertxt = [[#{rapprocher?}]];
-	const pleinecran = [[#{pleinecran}]];
-	const lesRuches = [[#{Ruches}]];
-	const couchemarqueursruches = [[#{couchemarqueursruches}]];
-	const essaimtxt = [[#{essaim}]];
-	const pasdessaimtxt = [[#{Pasdessaim}]];
-	const ruchetxt = [[#{ruche}]];
-	const lesHausses = [[#{Hausses}]];
-	const pasdehaussetxt = [[#{Pasdehausse}]];
-	const parcourstxt = [[#{parcours}]];
-	const parcoursoptimumtxt = [[#{parcoursoptimum}]];
-	const ruchestxt= [[#{ruches}]];
-	const distancedeparcourstxt = [[#{distancedeparcours}]];
-	const entreetxt = [[#{Entree}]];
-	const ruchesurl = [[@{/}]];
-	const _csrf_token = [[${_csrf.token}]];
-	const dessinEnregistretxt = [[#{dessinEnregistre}]];
+	let rucheParcours = /*[[${rucheParcours}]]*/ null;
+	let distParcours = /*[[${distParcours}]]*/ null;
+	const longitudeCentre = /*[[${longitudeCentre}]]*/ null;
+	const latitudeCentre = /*[[${latitudeCentre}]]*/ null;
+	const rayonsButinage = /*[[${rayonsButinage}]]*/ null;
+	const cercles = /*[[#{cercles}]]*/ null;
+	const distButinage = /*[[#{distButinage}]]*/ null;
+	const ruches = /*[[${ruches}]]*/ null;
+	const rucher = /*[[${rucher}]]*/ null;
+	const nomHausses = /*[[${hausseNoms}]]*/ null;
+	const rapprochertxt = /*[[#{rapprocher?}]]*/ null;
+	const pleinecran = /*[[#{pleinecran}]]*/ null;
+	const lesRuches = /*[[#{Ruches}]]*/ null;
+	const couchemarqueursruches = /*[[#{couchemarqueursruches}]]*/ null;
+	const essaimtxt = /*[[#{essaim}]]*/ null;
+	const pasdessaimtxt = /*[[#{Pasdessaim}]]*/ null;
+	const ruchetxt = /*[[#{ruche}]]*/ null;
+	const lesHausses = /*[[#{Hausses}]]*/ null;
+	const pasdehaussetxt = /*[[#{Pasdehausse}]]*/ null;
+	const parcourstxt = /*[[#{parcours}]]*/ null;
+	const parcoursoptimumtxt = /*[[#{parcoursoptimum}]]*/ null;
+	const ruchestxt= /*[[#{ruches}]]*/ null;
+	const distancedeparcourstxt = /*[[#{distancedeparcours}]]*/ null;
+	const entreetxt = /*[[#{Entree}]]*/ null;
+	const ruchesurl = /*[[@{/}]]*/ null;
+	const _csrf_token = /*[[${_csrf.token}]]*/ null;
+	const dessinEnregistretxt = /*[[#{dessinEnregistre}]]*/ null;
 	window.onload = function () {
  		rucherDetail(true); 			
 	}
