--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -3,14 +3,14 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:src="@{/js/ruches/ruchersListeGg.js}"></script>
 <script th:inline="javascript">
-	const ruchers = [[${ruchers}]];
-	const nomRuches = [[${rucheNoms}]];
-	const urlruches = [[@{/}]];
-	const ruchertxt = [[#{rucher}]];
-	const lesRuchestxt = [[#{Ruches}]];
-	const pasderuchetxt = [[#{PasDeRuche}]];
-	const ruchersmapzoom = [[${@environment.getProperty('ruchers.map.zoom')}]]	
-    const _csrf_token = [[${_csrf.token}]];
+	const ruchers = /*[[${ruchers}]]*/ null;
+	const nomRuches = /*[[${rucheNoms}]]*/ null;
+	const urlruches = /*[[@{/}]]*/ null;
+	const ruchertxt = /*[[#{rucher}]]*/ null;
+	const lesRuchestxt = /*[[#{Ruches}]]*/ null;
+	const pasderuchetxt = /*[[#{PasDeRuche}]]*/ null;
+	const ruchersmapzoom = /*[[${@environment.getProperty('ruchers.map.zoom')}]]*/ null	
+    const _csrf_token = /*[[${_csrf.token}]]*/ null;
 </script>
 <script async defer	th:src="${@environment.getProperty('gg.map.url')}"></script>
 </head>
